# ai-governance-red-team-control-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_risk.md
.github/workflows/: eval_nightly.yml  safety_gate.yml
config/: thresholds.yaml
controls/: __init__.py  _log.py  base.py  citation_enforcer.py  drift_detector.py  human_in_loop.py  jailbreak_detector.py  pii_filter.py  registry.py
docs/: AUDIT_2026-04-22.md  CI_SETUP.md  NIST_RMF_MAPPING.md  RED_TEAM.md  RUNBOOK.md  THREAT_MODEL.md
evals/: test_controls.py
evals/datasets/: citation_cases.jsonl  hitl_trigger_cases.jsonl  jailbreak_cases.jsonl  pii_cases.jsonl  regression_baseline.json
evals/runners/: amplified_coverage.py  eval_runner.py  metrics.py
evals/test_unit/: test_citation_enforcer.py  test_drift_detector.py  test_human_in_loop.py  test_jailbreak_detector.py  test_pii_filter.py  test_red_team.py
red_team/: __init__.py  generator.py  mutations.py  taxonomy.py
reports/sample/: CTRL-002.json  README.md  index.html
risk_register/: risks.yaml  schema.json  validate.py
scripts/: amplified_coverage.py  amplify_dataset.py  check_thresholds.py  generate_report.py  update_baseline.py
