[project]
name = "ai-governance-red-team-control-pipeline"
version = "0.1.0"
description = "Red team → controls → evals → CI safety gate (NIST AI RMF aligned)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Yingshi Liu" }]
license = { text = "MIT" }
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "pydantic>=2.6",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-json-report>=1.5",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-PyYAML",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["controls*", "evals*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["evals"]
pythonpath = ["."]
